--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <script type="text/javascript" src="./scripts/constants.js"></script>
   <script type="text/javascript" src="./scripts/palette.js"></script>
   <script type="text/javascript" src="./scripts/polylabel.js"></script>
- // <script type="text/javascript" src="./scripts/map.js"></script>
+ <!--   <script type="text/javascript" src="./scripts/map.js"></script> -->
 
 </body>
 </html>
