--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   <div class="loader">Loading...</div>
   <div id="map"></div>
-  <table id="maptable" class="display"></table>
+<!--  <table id="maptable" class="display"></table> -->
 
   <script type="text/javascript">
   var map = L.map('map').setView([0, 0], 2);
