--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
     }).setView([41.76,-72.69], 11); // default center is overridden by Google Sheet options and points
   </script>
 
+
+  	//image overlay
+	var imageUrl = 'https://foxholestats.com/images/WorldMapControl.webp',
+   imageBounds = [[82.6, -180], [-82.6, 180]];
+L.imageOverlay(imageUrl, imageBounds).addTo(map);
+
+  	//image overlay
+	var imageUrl = 'media/SUBREGIONS.png',
+   imageBounds = [[82.6, -180], [-82.6, 180]];
+L.imageOverlay(imageUrl, imageBounds).addTo(map);
+
   <script type="text/javascript" src="./google-doc-url.js"></script>
   <script type="text/javascript" src="./scripts/constants.js"></script>
   <script type="text/javascript" src="./scripts/palette.js"></script>
