--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
 var imageUrl = 'https://foxholestats.com/images/WorldMapControl.webp',
 	imageBounds = [[82.6, -180], [-82.6, 180]];
 	L.imageOverlay(imageUrl, imageBounds).addTo(map);
+var imageUrl = 'media/SUBREGIONS.png',
+	imageBounds = [[82.6, -180], [-82.6, 180]];
+	L.imageOverlay(imageUrl, imageBounds).addTo(map);
 
   </script>
 
