--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <script type="text/javascript">
     var map = L.map('map', {
-	L.tileLayer('https://foxholestats.com/tiles/worldmap_warapi.jpg-tiles/{z}_{x}_{y}.jpg', {
+	L.tileLayer('https://foxholestats.com/tiles/worldmap_warapi.jpg-tiles/{z}_{x}_{y}.jpg', 
       continuousWorld: false,
       noWrap: true,  
       attributionControl: false,
