--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
   <table id="maptable" class="display"></table>
 
   <script type="text/javascript">
-    var map = L.map('map', {
-	L.tileLayer('https://foxholestats.com/tiles/worldmap_warapi.jpg-tiles/{z}_{x}_{y}.jpg', 
+    var map = L.map('map', 
+	L.tileLayer('https://foxholestats.com/tiles/worldmap_warapi.jpg-tiles/{z}_{x}_{y}.jpg', {
       continuousWorld: false,
       noWrap: true,  
       attributionControl: false,
