--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <table id="maptable" class="display"></table>
 
   <script type="text/javascript">
-    var map = L.map('map', 
+    var map = L.map('map'; 
 	L.tileLayer('https://foxholestats.com/tiles/worldmap_warapi.jpg-tiles/{z}_{x}_{y}.jpg', {
       continuousWorld: false,
       noWrap: true,  
