--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 
   <script type="text/javascript">
     var map = L.map('map'; 
-	L.tileLayer('https://foxholestats.com/tiles/worldmap_warapi.jpg-tiles/{z}_{x}_{y}.jpg', {
+	//L.tileLayer('https://foxholestats.com/tiles/worldmap_warapi.jpg-tiles/{z}_{x}_{y}.jpg', 
+	  {
       continuousWorld: false,
       noWrap: true,  
       attributionControl: false,
@@ -85,6 +86,9 @@ var imageUrl = 'https://foxholestats.com/images/WorldMapControl.webp',
 	imageBounds = [[82.6, -180], [-82.6, 180]];
 	L.imageOverlay(imageUrl, imageBounds).addTo(map);
 var imageUrl = 'media/SUBREGIONS.png',
+	imageBounds = [[82.6, -180], [-82.6, 180]];
+	L.imageOverlay(imageUrl, imageBounds).addTo(map);
+ var imageUrl = 'https://foxholestats.com/tiles/worldmap_warapi.jpg-tiles/{z}_{x}_{y}.jpg',
 	imageBounds = [[82.6, -180], [-82.6, 180]];
 	L.imageOverlay(imageUrl, imageBounds).addTo(map);
 
