--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     var map = L.map('map'; 
 	//L.tileLayer('https://foxholestats.com/tiles/worldmap_warapi.jpg-tiles/{z}_{x}_{y}.jpg', 
 	  {
-      continuousWorld: false,
-      noWrap: true,  
+     // continuousWorld: false,
+    //  noWrap: true,  
       attributionControl: false,
       zoomControl: false,
       scrollWheelZoom: true,
