--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
       scrollWheelZoom: false,
       tap: false
     }).setView([41.76,-72.69], 11); // default center is overridden by Google Sheet options and points
+
+    //image overlay
+	var imageUrl = 'https://foxholestats.com/images/WorldMapControl.webp',
+   imageBounds = [[82.6, -180], [-82.6, 180]];
+L.imageOverlay(imageUrl, imageBounds).addTo(map);
   </script>
 
   <script type="text/javascript" src="./google-doc-url.js"></script>
