--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
 	var imageUrl = 'https://foxholestats.com/images/WorldMapControl.webp',
    imageBounds = [[82.6, -180], [-82.6, 180]];
 L.imageOverlay(imageUrl, imageBounds).addTo(map);
+	var imageUrl = 'media/SUBREGIONS.png',
+   imageBounds = [[82.6, -180], [-82.6, 180]];
+L.imageOverlay(imageUrl, imageBounds).addTo(map);
+  </script>
+
+
+	  
   </script>
 
   <script type="text/javascript" src="./google-doc-url.js"></script>
