--- a/index.html
+++ b/index.html
@@ -83,6 +83,17 @@ L.imageOverlay(imageUrl, imageBounds).addTo(map);
 	var imageUrl = 'media/SUBREGIONS.png',
    imageBounds = [[82.6, -180], [-82.6, 180]];
 L.imageOverlay(imageUrl, imageBounds).addTo(map);
+
+//Coordinate Finder
+    var marker = L.marker([0, 0], {
+      draggable: true,
+    }).addTo(map);
+    marker.bindPopup('LatLng Marker').openPopup();
+    marker.on('dragend', function(e) {
+      marker.getPopup().setContent(marker.getLatLng().toString()).openOn(map);
+    });
+
+	  
   </script>
 
 
