--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
    imageBounds = [[82.6, -180], [-82.6, 180]];
 L.imageOverlay(imageUrl, imageBounds).addTo(map);
 
+	var imageUrl = 'https://app.singular.live/output/2t9oD1xW4T2zOdA84B3CWV/Output?aspect=16:9',
+   imageBounds = [[82.6, -180], [-82.6, 180]];
+L.imageOverlay(imageUrl, imageBounds).addTo(map);	  
+
 //Coordinate Finder
 //    var marker = L.marker([0, 0], {
 //      draggable: true,
