--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
    imageBounds = [[82.6, -180], [-82.6, 180]];
 L.imageOverlay(imageUrl, imageBounds).addTo(map);
 
-	var imageUrl = 'https://app.singular.live/output/2t9oD1xW4T2zOdA84B3CWV/Output?aspect=16:9',
+	var imageUrl = 'https://app.singular.live/output/2t9oD1xW4T2zOdA84B3CWV/Output?aspect=responsive',
    imageBounds = [[82.6, -180], [-82.6, 180]];
 L.imageOverlay(imageUrl, imageBounds).addTo(map);	  
 
