--- a/index.html
+++ b/index.html
@@ -60,9 +60,18 @@
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+  <!-- Include the Singular Overlay JavaSrcipt library -->
+  <script src="https://app.singular.live/libs/singularoverlay/1.0.0/singularoverlay.js"></script>
+
+
 </head>
 
 <body>
+
+
+<
+  <!-- inside the div the iFrame of the overlay will be created -->
+  <div id="SingularOverlay" style="width:720px; height: 400px;"></div>
 
   <div class="loader">Loading...</div>
   <div id="map"></div>
