--- a/index.html
+++ b/index.html
@@ -71,6 +71,22 @@
 
 	  <!-- inside the div the iFrame of the overlay will be created -->
   <div id="SingularOverlay" style="width:720px; height: 400px;"></div>  
+	var options = {
+  class: "iFrameClass",
+  endpoint: "http://app.singular.live",
+  interactive: true,
+  syncGraphics: false,
+  showPreloader: false,
+  aspect: "",
+};
+
+var overlay = SingularOverlay("#DomElement", options, (params) => {
+  // callback code goes here
+});
+
+
+
+	
   <div class="loader">Loading...</div>
   <div id="map"></div>
   <table id="maptable" class="display"></table>
