--- a/index.html
+++ b/index.html
@@ -82,6 +82,16 @@
 
 var overlay = SingularOverlay("#DomElement", options, (params) => {
   // callback code goes here
+// defining composition revision URL as string
+var content = "https://assets.singular.live/f12f184c9a0eb763beb40478e02a1250/jsons/5E2QFRRjiRjN7n4AZUJPzq.json";
+// defining composition token as string
+var content = "6IX8LkY32V3KACSNvs0MnT";
+// defining composition token in content object
+var content = { compToken: "6IX8LkY32V3KACSNvs0MnT" };
+// defining app output token in content object
+var content = { appOutputToken: "6IX8LkY32V3KACSNvs0MnT" };
+// defining web output token in content object
+var content = { webOutputToken: "49bb0fyieZMUWAmQdbeajI" };
 });
 
 
