--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 
 	  <!-- inside the div the iFrame of the overlay will be created -->
-  <div id="SingularOverlay" style="width:720px; height: 400px;"></div>  
+  <div id="SingularOverlay" style="width:720px; height: 400px;"> 
 	var options = {
   class: "iFrameClass",
   endpoint: "http://app.singular.live",
@@ -94,7 +94,7 @@ var content = { appOutputToken: "6IX8LkY32V3KACSNvs0MnT" };
 var content = { webOutputToken: "49bb0fyieZMUWAmQdbeajI" };
 });
 
-
+</div> 
 
 	
   <div class="loader">Loading...</div>
