--- a/index.html
+++ b/index.html
@@ -70,31 +70,10 @@
 
 
 	  <!-- inside the div the iFrame of the overlay will be created -->
-  <div id="SingularOverlay" style="width:720px; height: 400px;"> 
-	var options = {
-  class: "iFrameClass",
-  endpoint: "http://app.singular.live",
-  interactive: true,
-  syncGraphics: false,
-  showPreloader: false,
-  aspect: "",
-};
+  <div id="SingularOverlay" style="width:720px; height: 400px;"> </div> 
 
-var overlay = SingularOverlay("#DomElement", options, (params) => {
-  // callback code goes here
-// defining composition revision URL as string
-var content = "https://assets.singular.live/f12f184c9a0eb763beb40478e02a1250/jsons/5E2QFRRjiRjN7n4AZUJPzq.json";
-// defining composition token as string
-var content = "6IX8LkY32V3KACSNvs0MnT";
-// defining composition token in content object
-var content = { compToken: "6IX8LkY32V3KACSNvs0MnT" };
-// defining app output token in content object
-var content = { appOutputToken: "6IX8LkY32V3KACSNvs0MnT" };
-// defining web output token in content object
-var content = { webOutputToken: "49bb0fyieZMUWAmQdbeajI" };
-});
 
-</div> 
+
 
 	
   <div class="loader">Loading...</div>
@@ -128,7 +107,28 @@ L.imageOverlay(imageUrl, imageBounds).addTo(map);
       marker.getPopup().setContent(marker.getLatLng().toString()).openOn(map);
     });
 
-	  
+	  	var options = {
+  class: "iFrameClass",
+  endpoint: "http://app.singular.live",
+  interactive: true,
+  syncGraphics: false,
+  showPreloader: false,
+  aspect: "",
+};
+
+var overlay = SingularOverlay("#DomElement", options, (params) => {
+  // callback code goes here
+// defining composition revision URL as string
+var content = "https://assets.singular.live/f12f184c9a0eb763beb40478e02a1250/jsons/5E2QFRRjiRjN7n4AZUJPzq.json";
+// defining composition token as string
+var content = "6IX8LkY32V3KACSNvs0MnT";
+// defining composition token in content object
+var content = { compToken: "6IX8LkY32V3KACSNvs0MnT" };
+// defining app output token in content object
+var content = { appOutputToken: "6IX8LkY32V3KACSNvs0MnT" };
+// defining web output token in content object
+var content = { webOutputToken: "49bb0fyieZMUWAmQdbeajI" };
+});
   </script>
 
 
