--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@ L.imageOverlay(imageUrl, imageBounds).addTo(map);
 var overlay = SingularOverlay("#DomElement", options, (params) => {
   // callback code goes here
 // defining composition revision URL as string
-var content = "https://assets.singular.live/f12f184c9a0eb763beb40478e02a1250/jsons/5E2QFRRjiRjN7n4AZUJPzq.json";
+var content = "https://assets.singular.live/392a9b828b4cb0743373404d8acc8fff/jsons/4YcbTTP8cEJf4fFgDmhcD0.json";
 // defining composition token as string
 var content = "6IX8LkY32V3KACSNvs0MnT";
 // defining composition token in content object
-var content = { compToken: "6IX8LkY32V3KACSNvs0MnT" };
+//var content = { compToken: "6IX8LkY32V3KACSNvs0MnT" };
 // defining app output token in content object
-var content = { appOutputToken: "6IX8LkY32V3KACSNvs0MnT" };
+//var content = { appOutputToken: "6IX8LkY32V3KACSNvs0MnT" };
 // defining web output token in content object
-var content = { webOutputToken: "49bb0fyieZMUWAmQdbeajI" };
+var content = { webOutputToken: "1uXr7z15z0nt2j29sgg5QW" };
 });
   </script>
 
