--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ var overlay = SingularOverlay("#DomElement", options, (params) => {
 // defining composition revision URL as string
 var content = "https://assets.singular.live/392a9b828b4cb0743373404d8acc8fff/jsons/4YcbTTP8cEJf4fFgDmhcD0.json";
 // defining composition token as string
-var content = "6IX8LkY32V3KACSNvs0MnT";
+//var content = "6IX8LkY32V3KACSNvs0MnT";
 // defining composition token in content object
 //var content = { compToken: "6IX8LkY32V3KACSNvs0MnT" };
 // defining app output token in content object
