--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 <body>
   <div class="loader">Loading...</div>
   <div id="map"></div>
+<!-- inside the div the iFrame of the overlay will be created -->
+  <div id="SingularOverlay" style="width:720px; height: 400px;"></div>
   <table id="maptable" class="display"></table>
 
   <script type="text/javascript">
