--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
   <div id="map"></div>
 <!-- inside the div the iFrame of the overlay will be created -->
   <div id="SingularOverlay" style="width:720px; height: 400px;"></div>
-  <table id="maptable" class="display"></table>
+  
+<table id="maptable" class="display"></table>
 
   <script type="text/javascript">
     var map = L.map('map', {
@@ -101,9 +102,26 @@ L.imageOverlay(imageUrl, imageBounds).addTo(map);
     });
 
 
-  </script>
+</script>
+<script>
+//singular.live code	
+var options = {
+  class: "iFrameClass",
+  endpoint: "http://app.singular.live",
+  interactive: true,
+  syncGraphics: false,
+  showPreloader: false,
+  aspect: "",
+};
 
-
+var overlay = SingularOverlay("#DomElement", options, (params) => {
+  // callback code goes here
+	overlay.setContent(content, (params) => {
+  // called when content finished loading
+// defining composition revision URL as string
+var content = "https://assets.singular.live/392a9b828b4cb0743373404d8acc8fff/jsons/5qD42N33BD89Tit0MJrS8j.json";
+});
+});
 	  
   </script>
 
