--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@ L.imageOverlay(imageUrl, imageBounds).addTo(map);
     });
 
 
+// Storm Circles
+	  L.circle([0, 0], {radius: 200}).addTo(map);
+	  
+
   </script>
 
 
