--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ L.imageOverlay(imageUrl, imageBounds).addTo(map);
 
 
 // Storm Circles
-	  L.circle([0, 0], {radius: 192145.4}).addTo(map);
+	  L.circleMarker([0, 0], {radius: 100}).addTo(map);
 	  
 
   </script>
