--- a/index.html
+++ b/index.html
@@ -100,7 +100,12 @@ L.imageOverlay(imageUrl, imageBounds).addTo(map);
 
 
 // Storm Circles
-	  L.circleMarker([0, 0], {radius: 100}).addTo(map);
+	  L.circleMarker([0, 0], {radius: 100});
+		stoke: true,
+	  	color: #FFFF00,
+		fill: true,
+		color: #FFFF00,
+		  .addTo(map);
 	  
 
   </script>
