--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ L.imageOverlay(imageUrl, imageBounds).addTo(map);
 // Storm Circles
 	  L.circleMarker([0, 0], {radius: 100,
 	  	fill: true,
-	  	color: #FFFF00})
+	  	color: "#FFFF00"})
 		  .addTo(map);
 	  
 
