--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ L.imageOverlay(imageUrl, imageBounds).addTo(map);
 
 
 // Storm Circles
-	  L.circle([0, 0], {radius: 900000,
+	  L.circle([0, 0], {radius: 4209000,
 	  	fill: true,
 	  	color: "#FFFF00"})
 		  .addTo(map);
