--- a/index.html
+++ b/index.html
@@ -98,9 +98,28 @@ L.imageOverlay(imageUrl, imageBounds).addTo(map);
       marker.getPopup().setContent(marker.getLatLng().toString()).openOn(map);
     });
 
+// Storm Colors:
+//THUNDER WATCH
+// "#FFFF00"
+
+//THUNDER ADVISORY
+// "#FF9900"
+
+//THUNDER WARNING
+// "#FF0000"
+
+
+//WINTER WARNING
+// "#ff69b4"
+
+//WINTER WATCH
+// "#e692f8"
+
+//WINTER ADVISORY
+// "#7b68ee"
 
 // Storm Circles
-	  L.circle([0, 0], {radius: 2700000,
+	  L.circle([0, 0], {radius: 2800000,
 	  	fill: true,
 	  	color: "#FFFF00"})
 		  .addTo(map);
