--- a/index.html
+++ b/index.html
@@ -118,11 +118,13 @@ L.imageOverlay(imageUrl, imageBounds).addTo(map);
 //WINTER ADVISORY
 // "#7b68ee"
 
+// hex radius: 2800000
+	  
 // Storm Circles
-	  L.circle([0, 0], {radius: 2800000,
-	  	fill: true,
-	  	color: "#FFFF00"})
-		  .addTo(map);
+//	  L.circle([0, 0], {radius: 2800000,
+//	  	fill: true,
+//	  	color: "#FFFF00"})
+//		  .addTo(map);
 	  
 
   </script>
