--- a/index.html
+++ b/index.html
@@ -127,6 +127,30 @@ L.imageOverlay(imageUrl, imageBounds).addTo(map);
 //		  .addTo(map);
 	  
 
+
+// using points as circles https://geojson.io/#map=2/0/20
+// This will be run when L.geoJSON creates the point layer from the GeoJSON data.
+function createCircle( feature, latlng ){
+  // Change the values of these options to change the symbol's appearance
+  let options = {
+    radius: 2800000,
+    fillColor: "lightgreen",
+    color: "black",
+    weight: 1,
+    opacity: 1,
+    fillOpacity: 0.8
+  }
+  return L.circle( latlng, options );
+}
+
+
+  // Use Leaflet's geoJSON method to turn the data into a feature layer
+  L.geoJSON( geodata/Storm.geojson, {
+    pointToLayer: createCircleMarker // Call the function createCircleMarker to create the symbol for this layer
+  }).addTo( mymap )
+})
+
+	  
   </script>
 
 
