--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ L.imageOverlay(imageUrl, imageBounds).addTo(map);
 
 // using points as circles https://geojson.io/#map=2/0/20
 // This will be run when L.geoJSON creates the point layer from the GeoJSON data.
-function createCircle( feature, latlng ){
+function createCircleMarker( feature, latlng ){
   // Change the values of these options to change the symbol's appearance
   let options = {
     radius: 2800000,
@@ -140,7 +140,7 @@ function createCircle( feature, latlng ){
     opacity: 1,
     fillOpacity: 0.8
   }
-  return L.circle( latlng, options );
+  return L.circleMarker( latlng, options );
 }
 
 
