--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </head>
     <body>
         <div class="container">
-          <a href="/api/discord/login">Login through discord</a>
+          <a href="https://discord.com/oauth2/authorize?client_id=1303632758723051540&response_type=code&redirect_uri=https%3A%2F%2Fydlhoqxitfgohxefqcth.supabase.co%2Fauth%2Fv1%2Fcallback&scope=identify+guilds.members.read+guilds">Login through discord</a>
         </div>
     </body>
 </html>
